2004-06-08  Carl Hetherington  <inkscape@carlh.net>

	* src/main.cpp: remove the call to
	Extension::Internal::PrintWin32::init() entirely after Ted pointed
	out that it would be called by code in src/extension/init.cpp
	anyway.

2004-06-08  Ted Gould  <ted@gould.cx>

	* src/main.cpp:

	Added in a version command to our command line args.  This fixes
	enhancement request 968642.

2004-07-07  MenTaLguY  <mental@rydia.net>

	* src/document.cpp, src/document.h, src/document-undo.cpp,
	  src/sp-object.h, src/sp-object.cpp:
	  renamed object garbage collection routines to fit the "orphan"
	  terminology

2004-06-07  Carl Hetherington <inkscape@carlh.net>

	* src/main.cpp: tentative fix for startup crash on Win32.  Ensure
	that Extension::Internal::PrintWin32::init() is not called until
	after inkscape_application_init().

2004-06-07  Ted Gould  <ted@gould.cx>

	* src/inkscape.cpp, src/main.cpp:

	Moving the initialization of the extensions into the Inkscape application
	init.  I have mixed feelings on this.  One one hand, basically extension
	init gets called directly after applicaiton init and extensions init has
	nothing to do with anything else in main.  On the other hand I'm not sure
	that it is directly related to the structure of the application itself.
	Comments are welcome.

2004-06-06  MenTaLguY  <mental@rydia.net>

	* src/attributes.cpp, src/attributes.h: added inkscape:collect attribute
	  to specify orphan collection policy (collect with parent, or always
	  collect)

	* src/document-undo.cpp, src/document.cpp, src/document.h: added an orphan
	  collection pass as part of comitting an undo step
	  
	* src/sp-object.cpp, src/sp-object.h:
	  add total hrefcount for all descendants, and basic orphan collection
	  facilities

	* src/gradient-chemistry.cpp, src/dialogs/stroke-style.cpp,
	  src/extension/internal/gdkpixbuf-input.cpp:
	  mark automatically added gradients, patterns, and markers for orphan
	  collection
